--- a/behavioral_cloning.ipynb
+++ b/behavioral_cloning.ipynb
@@ -2,57 +2,104 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "features Shape:  (3090, 160, 320, 3)\n",
-      "lables Shape:  3090\n"
+      "file:  C:\\data\\1\\driving_log.csv , data samples:  8037\n",
+      "file:  C:\\data\\2\\driving_log.csv , data samples:  9091\n",
+      "total data samples:  9091\n"
      ]
     }
    ],
    "source": [
+    "#Loading the data\n",
+    "import os \n",
     "import csv\n",
-    "import cv2\n",
-    "import numpy as np\n",
     "\n",
     "lines=[]\n",
-    "with open('C:\\data\\driving_log.csv') as csvfile:\n",
-    "    reader = csv.reader(csvfile)\n",
-    "    for line in reader:\n",
-    "        lines.append(line)\n",
-    "        \n",
-    "images = []\n",
-    "measurments = []\n",
-    "for line in lines:\n",
-    "    image_center = cv2.imread(line[0])\n",
-    "    image_left = cv2.imread(line[1])\n",
-    "    image_right = cv2.imread(line[2])\n",
-    "    images.extend([image, image_left, image_right])\n",
-    "    steering = float(line[3])\n",
-    "    measurments.extend([steering, steering+0.1, steering-0.1])\n",
-    "    \n",
-    "X_train = np.array(images)\n",
-    "y_train = np.array(measurments)\n",
-    "\n",
-    "print(\"features Shape: \", X_train.shape)\n",
-    "print(\"lables Shape: \", len(y_train))"
+    "data_folder = 'C:\\data\\\\'\n",
+    "file = '\\driving_log.csv'\n",
+    "for child in os.listdir(data_folder):\n",
+    "    data_subfolder = os.path.join(data_folder, child)\n",
+    "    sub_file = data_subfolder + file\n",
+    "    with open(sub_file) as csvfile:\n",
+    "        reader = csv.reader(csvfile)\n",
+    "        for line in reader:\n",
+    "            lines.append(line)\n",
+    "    print (\"file: \", sub_file, \", data samples: \", len(lines))\n",
+    "            \n",
+    "print(\"total data samples: \", len(lines))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "train_samples, validation_samples = train_test_split(lines, test_size=0.2)\n",
+    "\n",
+    "def augmentation(images, measurments):\n",
+    "    aug_images, aug_measurments= [], []\n",
+    "    for image, measurment in zip(images, measurments):\n",
+    "        aug_images.append(cv2.flip(image,1))\n",
+    "        aug_measurments.append(measurment*-1.0)\n",
+    "    return aug_images, aug_measurments\n",
+    "\n",
+    "def generator(samples, batch_size=32):\n",
+    "    while 1: # Loop forever so the generator never terminates\n",
+    "        shuffle(samples)\n",
+    "        for offset in range(0, len(samples), batch_size):\n",
+    "            batch_samples = samples[offset:offset+batch_size]\n",
+    "\n",
+    "            images = []\n",
+    "            measurments = []\n",
+    "            for line in lines:\n",
+    "\n",
+    "                image_center = cv2.imread(line[0])\n",
+    "                image_left = cv2.imread(line[1])\n",
+    "                image_right = cv2.imread(line[2])\n",
+    "                images.extend([image, image_left, image_right])\n",
+    "\n",
+    "                steering = float(line[3])\n",
+    "                measurments.extend([steering, steering+0.1, steering-0.1])\n",
+    "                \n",
+    "                #augmented_images, augmented_measurments = augmentation([image, image_left, image_right], [steering, steering+0.1, steering-0.1])\n",
+    "                #images.extend(augmented_images)\n",
+    "                #measurments.extend(augmented_measurments)\n",
+    "                \n",
+    "            # trim image to only see section with road\n",
+    "            X_train = np.array(images)\n",
+    "            y_train = np.array(measurments)\n",
+    "            yield sklearn.utils.shuffle(X_train, y_train)\n",
+    "\n",
+    "# compile and train the model using the generator function\n",
+    "train_generator = generator(train_samples, batch_size=32)\n",
+    "validation_generator = generator(validation_samples, batch_size=32)\n",
+    "\n",
+    "#print(\"features Shape: \", train_generator)\n",
+    "#print(\"lables Shape: \", validation_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "augmented features Shape:  3090\n",
-      "augmented lables Shape:  3090\n"
+      "augmented features Shape:  5406\n",
+      "augmented lables Shape:  5406\n"
      ]
     }
    ],
@@ -71,18 +118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6180, 160, 320, 3) (6180,)\n"
+      "(10812,) (10812,)\n"
      ]
     }
    ],
    "source": [
+    "# Adding the augmented images to the train data\n",
+    "\n",
     "X_train = np.concatenate([X_train, aug_images])\n",
     "y_train = np.concatenate([y_train, aug_measurments])\n",
     "print(X_train.shape, y_train.shape)"
@@ -90,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -102,42 +151,96 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 4944 samples, validate on 1236 samples\n",
-      "Epoch 1/5\n",
-      "4944/4944 [==============================] - 242s - loss: 0.0867 - val_loss: 0.0221\n",
-      "Epoch 2/5\n",
-      "4512/4944 [==========================>...] - ETA: 20s - loss: 0.0105"
+     "ename": "ValueError",
+     "evalue": "Error when checking input: expected lambda_16_input to have 4 dimensions, but got array with shape (10812, 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-57-16320840b197>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'mse'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'adam'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 30\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalidation_split\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnb_epoch\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'model.h5'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\models.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, **kwargs)\u001b[0m\n\u001b[0;32m    863\u001b[0m                               \u001b[0mclass_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mclass_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    864\u001b[0m                               \u001b[0msample_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 865\u001b[1;33m                               initial_epoch=initial_epoch)\n\u001b[0m\u001b[0;32m    866\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    867\u001b[0m     def evaluate(self, x, y, batch_size=32, verbose=1,\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, **kwargs)\u001b[0m\n\u001b[0;32m   1355\u001b[0m             \u001b[0mclass_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mclass_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1356\u001b[0m             \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1357\u001b[1;33m             batch_size=batch_size)\n\u001b[0m\u001b[0;32m   1358\u001b[0m         \u001b[1;31m# Prepare validation data.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1359\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mvalidation_data\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36m_standardize_user_data\u001b[1;34m(self, x, y, sample_weight, class_weight, check_batch_axis, batch_size)\u001b[0m\n\u001b[0;32m   1231\u001b[0m                                     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_feed_input_shapes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1232\u001b[0m                                     \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1233\u001b[1;33m                                     exception_prefix='input')\n\u001b[0m\u001b[0;32m   1234\u001b[0m         y = _standardize_input_data(y, self._feed_output_names,\n\u001b[0;32m   1235\u001b[0m                                     \u001b[0moutput_shapes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36m_standardize_input_data\u001b[1;34m(data, names, shapes, check_batch_axis, exception_prefix)\u001b[0m\n\u001b[0;32m    126\u001b[0m                                  \u001b[1;34m' to have '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshapes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    127\u001b[0m                                  \u001b[1;34m' dimensions, but got array with shape '\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 128\u001b[1;33m                                  str(array.shape))\n\u001b[0m\u001b[0;32m    129\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mref_dim\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshapes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    130\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Error when checking input: expected lambda_16_input to have 4 dimensions, but got array with shape (10812, 1)"
      ]
     }
    ],
    "source": [
     "from keras.models import Sequential\n",
-    "from keras.layers import Flatten, Dense, Lambda, Cropping2D\n",
+    "from keras.layers import Flatten, Dense, Lambda, Cropping2D, Dropout\n",
     "from keras.layers.convolutional import Conv2D, MaxPooling2D\n",
+    "from time import time\n",
+    "start_time = time()\n",
+    "\n",
+    "dropout = 0.5\n",
     "\n",
     "model = Sequential()\n",
-    "#normalization and mean zero\n",
+    "#normalization and mean zero - centered around zero with small standard deviation \n",
     "model.add(Lambda(lambda x: x/255.0 -0.5, input_shape=(160,320,3))) \n",
     "#cropping2D layer\n",
     "model.add(Cropping2D(cropping=((70,25), (0,0)), input_shape=(160,320,3)))\n",
     "#model.add(Flatten())\n",
     "model.add(Dense(1))\n",
-    "model.add(Conv2D(6, kernel_size=(5, 5), padding='valid', activation='relu'))\n",
+    "model.add(Conv2D(24, kernel_size=(5, 5), padding='valid', activation='relu'))\n",
     "model.add(MaxPooling2D())\n",
-    "model.add(Conv2D(6, kernel_size=(5, 5), padding='valid', activation='relu'))\n",
+    "model.add(Dropout(dropout))\n",
+    "model.add(Conv2D(36, kernel_size=(5, 5), padding='valid', activation='relu'))\n",
     "model.add(MaxPooling2D())\n",
+    "model.add(Dropout(dropout))\n",
+    "model.add(Conv2D(48, kernel_size=(5, 5), padding='valid', activation='relu'))\n",
+    "model.add(MaxPooling2D())\n",
+    "model.add(Dropout(dropout))\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(120))\n",
-    "model.add(Dense(84))\n",
-    "model.add(Dense(1))\n",
+    "model.add(Dense(100,activation='elu'))\n",
+    "model.add(Dense(50,activation='elu'))\n",
+    "model.add(Dense(10,activation='elu'))\n",
+    "model.add(Dense(1,activation='elu'))\n",
     "\n",
     "model.compile(loss='mse', optimizer='adam')\n",
-    "model.fit(X_train, y_train, validation_split=0.2, shuffle=True, nb_epoch=5)\n",
+    "model.fit(X_train, y_train, validation_split=0.2, shuffle=True, nb_epoch=5, verbose = 1)\n",
+    "model.save('model.h5')\n",
     "\n",
-    "model.save('model.h5')"
+    "total_time = time() - start_time\n",
+    "minutes, seconds = divmod(total_time, 60)\n",
+    "print (\"Total time for uploading data: \", minutes, \"min, {:.0f}\".format(seconds),  \"s \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_generator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-41-ea569e0fbf4c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m history_object = model.fit_generator(train_generator, samples_per_epoch = len(train_samples), \n\u001b[0m\u001b[0;32m      5\u001b[0m     validation_data = validation_generator, nb_val_samples = len(validation_samples), nb_epoch=5, verbose=1)\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_generator' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.models import Model\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "history_object = model.fit_generator(train_generator, samples_per_epoch = len(train_samples), \n",
+    "    validation_data = validation_generator, nb_val_samples = len(validation_samples), nb_epoch=5, verbose=1)\n",
+    "\n",
+    "### print the keys contained in the history object\n",
+    "print(history_object.history.keys())\n",
+    "\n",
+    "### plot the training and validation loss for each epoch\n",
+    "plt.plot(history_object.history['loss'])\n",
+    "plt.plot(history_object.history['val_loss'])\n",
+    "plt.title('model mean squared error loss')\n",
+    "plt.ylabel('mean squared error loss')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['training set', 'validation set'], loc='upper right')\n",
+    "plt.show()"
    ]
   },
   {
