--- a/behavioral_cloning.ipynb
+++ b/behavioral_cloning.ipynb
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -671,6 +671,57 @@
     "print(json_string)\n",
     "with open('model.json', 'w') as file:\n",
     "    file.write(json_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "lambda_1 (Lambda)            (None, 80, 320, 3)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_1 (Conv2D)            (None, 76, 316, 24)       1824      \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 72, 312, 36)       21636     \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 72, 312, 36)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 68, 308, 48)       43248     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 34, 154, 48)       0         \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 34, 154, 48)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_4 (Conv2D)            (None, 32, 152, 64)       27712     \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 311296)            0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 100)               31129700  \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 50)                5050      \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 10)                510       \n",
+      "_________________________________________________________________\n",
+      "dense_4 (Dense)              (None, 1)                 11        \n",
+      "=================================================================\n",
+      "Total params: 31,229,691\n",
+      "Trainable params: 31,229,691\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "summary = model.summary()\n",
+    "print(summary)"
    ]
   }
  ],
