--- a/Behavioral_Cloning.ipynb
+++ b/Behavioral_Cloning.ipynb
@@ -1,6 +1,50 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Behavioral Cloning**\n",
+    "\n",
+    "**Train a car to drive autonomously in a simulator**\n",
+    "\n",
+    "\n",
+    "## The goals\n",
+    "\n",
+    "The goals / steps of this project are the following:\n",
+    "* Use the simulator to collect data of good driving behavior\n",
+    "* Build a convolution neural network in Keras that predicts steering angles from images\n",
+    "* Train and validate the model with a training and validation set\n",
+    "* Test that the model successfully drives around track one without leaving the road\n",
+    "* Summarize the results with a written report"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Collecting the Training Set\n",
+    "\n",
+    "To capture good driving behavior, I first recorded a couple of laps on track one using center lane driving. Each recording epoch consist of 3 images represent 3 cameras on the vehicle. Having 3 images for each epoch help collecting more data, and teach the network how to steer back to the center and correct wrong behaviors.\n",
+    "\n",
+    "Here is an example of how center lane driving looks from all the three cameras:\n",
+    "\n",
+    "Left camera              |  Center camera | Right camera\n",
+    ":---------------------:|:---------------------:|:---------------------:\n",
+    "![]( https://github.com/shmulik-willinger/behavioral_cloning/blob/master/readme_img/left_2017_08_13_15_56_31_426.jpg?raw=true)  |  ![]( https://github.com/shmulik-willinger/behavioral_cloning/blob/master/readme_img/center_2017_08_13_15_56_31_426.jpg?raw=true) |  ![]( https://github.com/shmulik-willinger/behavioral_cloning/blob/master/readme_img/right_2017_08_13_15_56_31_426.jpg?raw=true)\n",
+    "\n",
+    "In order to use the left and right images I needed to add a correction factor for the center-steering measurment, in order to  create adjusted steering measurements for the side camera images\n",
+    "\n",
+    "Some of the interesting challenges on the tracks includes driving in the sharp curves, different texture and different borders of the road, and the second Track is also different from the first one. In order to train the car to drive on all of them I repeated the collection process on all the tracks and laps. Driving in the simulator is pretty difficult in some curves.\n",
+    "\n",
+    "I collected data of center lane driving from 5 laps, and some extra data for 'recovery driving from the sides', along with special data recording driving smoothly around 10 sharp curves.\n",
+    "\n",
+    "After the collection process, I had 74760 data points images to start with.\n",
+    "\n",
+    "Each image dimensions is 160 X 320 pixels with 3 channels -RGB.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -236,6 +280,7 @@
    ],
    "source": [
     "#Example of how the csv file holds the data\n",
+    "\n",
     "import pandas as pn\n",
     "%matplotlib inline\n",
     "\n",
@@ -252,7 +297,7 @@
    },
    "outputs": [],
    "source": [
-    "#Augmentation\n",
+    "#Augmentation functions\n",
     "\n",
     "def flip_images(images, measurements):\n",
     "    flipped_images, flipped_measurements = [], []\n",
@@ -282,6 +327,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Image processing visualization example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -300,7 +352,7 @@
     }
    ],
    "source": [
-    "#Image processing visualization\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import cv2\n",
@@ -409,6 +461,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Regarding the distribution of the steering lables, It is clear to see that steering angle s=0 have the highest frequency, and that there are more positive angles than negative, meaning the dataset is not balance (By horizontally reversing the images we gain distribution balancing)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -441,6 +500,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to gauge how well the model was working, I split my images and steering angle data into a training and validation set. The validation set took 20% of the dataset and helped determine if the model was over or under fitting."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -451,6 +517,36 @@
     "# Spliting the dataset to Train and Validation\n",
     "from sklearn.model_selection import train_test_split\n",
     "train_samples, validation_samples = train_test_split(lines, test_size=0.2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pre-process the Data Set\n",
+    "\n",
+    "Data augmentation has a couple of benefits, including adding more comprehensive data for training.\n",
+    "I needed lots of data in order to well train the model. After collecting all the data from the two tracks, driving back and forth, and using all the 3 cameras images, I also performed the following steps:\n",
+    "\n",
+    "The top portion of the image capture sky, trees and other elements which are unnecessary for the training process and might distract the model, the same for the lower portion of the image. So I decided to remove pixels containing redundant information. I cropped The images to remove this pixels. Each image reduced capacity by 50%, and I gained a more accurate model, along with savings space, memory and model runtime.\n",
+    "\n",
+    "Here is an example of the cropping process on an image:\n",
+    "\n",
+    "original image      |  Cropping process | Cropped image\n",
+    ":---------------------:|:---------------------:|:---------------------:\n",
+    "![]( https://github.com/shmulik-willinger/behavioral_cloning/blob/master/readme_img/original.jpg?raw=true)  |  ![]( https://github.com/shmulik-willinger/behavioral_cloning/blob/master/readme_img/cropped.jpg?raw=true) |  ![]( https://github.com/shmulik-willinger/behavioral_cloning/blob/master/readme_img/processed.jpg?raw=true)\n",
+    "\n",
+    "Since each recording epoch has 3 images represent 3 cameras on the vehicle, I used all this images to increase the dataset and generalize the model. It's important to add a correction-angle  for the steering measurement for the left and right cameras, since the steering provided from the simulator represent the center camera only.\n",
+    "\n",
+    " ![]( https://github.com/shmulik-willinger/behavioral_cloning/blob/master/readme_img/correction-angle.png?raw=true)\n",
+    "\n",
+    "To help the model generalize better and to improve the accuracy on the opposite curves, I flipped the images and angles to simulate driving counter-clockwise, thinking that this would save me from collecting more reliable information and will double the dataset. There are couple of ways to horizontally flip an image, I used cv2.flip() after observing that it is much faster than using other methods like np.fliplr().\n",
+    "\n",
+    "Here is an example of image that has been flipped in that process:\n",
+    "\n",
+    "original image      |  flipped image\n",
+    ":---------------------:|:---------------------:\n",
+    "![]( https://github.com/shmulik-willinger/behavioral_cloning/blob/master/readme_img/before_flip.jpg?raw=true)  |  ![]( https://github.com/shmulik-willinger/behavioral_cloning/blob/master/readme_img/after_flip.jpg?raw=true)"
    ]
   },
   {
@@ -484,6 +580,15 @@
     "        images.extend(flipped_images)\n",
     "        measurements.extend(flipped_measurements)\n",
     "    return images, measurements\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Using Generator**\n",
+    "\n",
+    "The images captured in the car simulator are very large comparing to dataset images for other common networks. Each image contains 76,800 pixels (80X320X3) after cropping, and when the dataset contains 70K images we need a huge memory for network training. I used Generator, enables to train the model by producing batches with data processing in real time, only when the model need it."
    ]
   },
   {
@@ -532,6 +637,41 @@
     "\n",
     "print(\"features Shape: \", train_generator)\n",
     "print(\"lables Shape: \", validation_generator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model Architecture\n",
+    "\n",
+    "My model consisted of the following layers:\n",
+    "\n",
+    "\n",
+    "| Layer | Component    \t|     Output\t \t| # Param |\n",
+    "|:----------------:|:------------:|:------------:|:------------:|\n",
+    "| Lambda | Normalization and mean zero | (None, 80, 320, 3) | 0 |\n",
+    "| Convolution | kernel_size=(5, 5), strides=(2, 2), padding='valid', activation='relu' | (None, 38, 158, 24) | 1824 |\n",
+    "| Dropout\t| rate=0.5 | (None, 38, 158, 24) | 0 |\n",
+    "| Convolution |\tkernel_size=(5, 5), strides=(2, 2), padding='valid', activation='relu'\t|(None, 17, 77, 36) | 21636 |\n",
+    "| Dropout\t| rate=0.5 | (None, 17, 77, 36) | 0 |\n",
+    "| Convolution |kernel_size=(5, 5), strides=(2, 2), padding='valid', activation='relu'\t| (None, 7, 37, 48) | 43248 |\n",
+    "| Dropout\t| rate=0.5 | (None, 7, 37, 48) | 0 |\n",
+    "| Convolution\t| kernel_size=(3, 3), strides=(1, 1), padding='valid', activation='relu' | (None, 5, 35, 64) | 27712|\n",
+    "| Dropout\t| rate=0.5 | (None, 5, 35, 64) | 0 |\n",
+    "| Convolution\t| kernel_size=(3, 3), strides=(1, 1), padding='valid', activation='relu' | (None, 3, 33, 64) | 36928 |\n",
+    "| Dropout\t| rate=0.5 | (None, 3, 33, 64) | 0 |\n",
+    "| Flatten | Flattens the input to one dimension |(None, 6336)| 0 |\n",
+    "| Dense | Fully connected |(None, 100)| 633700|\n",
+    "| Dense | Fully connected |(None, 50)| 5050|\n",
+    "| Dense | Fully connected |(None, 10)| 510|\n",
+    "| Dense | Output layer  |(None, 1)| 1|\n",
+    "\n",
+    "The network consists of a convolution neural network starting with normalization layer, followed by 3 convolution layers with kernel of 5x5 and 2 convolution layer with kernel of 3X3. filter sizes and depths between 24 and 64, with by Dropout layers between them.\n",
+    "\n",
+    "The model uses RELU activation on the layers to introduce nonlinearity, and the data is normalized in the model using a Keras lambda layer.\n",
+    "\n",
+    "At the end of the model I have 4 Fully connected layers and a single output node that will predict the steering angle (regression network)\n"
    ]
   },
   {
